# PyExpressions

./: README.md  pyproject.toml
expressions/: sexpression.py
tests/: test_expressions.py
